--- a/town/src/App.css
+++ b/town/src/App.css
@@ -1,3 +1,10 @@
+.mainPage {
+  background-color: rgb(0, 64, 166);
+  padding: 1px 20px;
+  color: white;
+}
+
+
 .menu__list {
   padding: 0;
   display: flex;
@@ -8,7 +15,8 @@
 }
 .menu__item-link {
   text-decoration: none;
-  color: black;
+  color: white;
+  font-size: 16px;
 }
 .container {
   margin: 0 auto;
@@ -56,5 +64,84 @@ body {
   display: block;
   width: 100%;
   height: 100%;
+  object-fit: contain;
+}
+
+.townInformation-row {
+  display: flex;
+  justify-content: space-between;
+}
+.townInformation__left-section {
+  font-size: 16px;
+  line-height: 22px;
+  width: 55%;
+}
+.townInformation__right-section {
+  width: 38%;
+}
+.townInformation-image {
+  width: 300px;
+  height: 180px;
+}
+.townInformation-image img{
+  display: block;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+  object-position: center;
+}
+
+.mostPlace-image {
+  width: 100%;
+}
+.mostPlace-image img{
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.photoUploadForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+form {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  -webkit-box-shadow: 0px 0px 11px -1px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 0px 0px 11px -1px rgba(34, 60, 80, 0.2);
+  box-shadow: 0px 0px 11px -1px rgba(34, 60, 80, 0.2);
+  padding: 20px 0 40px;
+}
+.form__input-field {
+  display: flex;
+  flex-direction: column;
+}
+input {
+  width: 300px;
+  height: 25px;
+  margin-bottom: 10px;
+}
+textarea {
+  width: 300px;
+  margin-bottom: 10px;
+}
+label {
+  margin-bottom: 5px;
+}
+button {
+  height: 50px;
+  width: 200px;
+  margin-top: 20px;
+  background-color: rgb(0, 64, 166);
+  border: none;
+  border-radius: 3px;
+  font-size: 20px;
+  color: white;
 }
